Linked List Implementation

--- a/Time_Space_Complexity_Data_Structures-Starter.ipynb
+++ b/Time_Space_Complexity_Data_Structures-Starter.ipynb
@@ -303,17 +303,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LinkedListNode:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        \n",
+    "    def traverse_list(self):\n",
+    "        node = self\n",
+    "        while node is not None:\n",
+    "            print(node.value)\n",
+    "            node = node.next\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "node1 = LinkedListNode('Monday')\n",
+    "node2 = LinkedListNode('Tuesday')\n",
+    "node3 = LinkedListNode('Wednesday')\n",
+    "\n",
+    "node1.next = node2\n",
+    "node2.next = node3\n",
+    "\n",
+    "node1.traverse_list()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monday\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Node|Wednesday>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Complete Implementation of Linked List\n",
+    "\n",
+    "# 2 Classes - Linked List class & Node class\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return self.value\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"<Node|{self.value}>\"\n",
+    "    \n",
+    "    \n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        # head attribute points to the first node of the Linked List\n",
+    "        self.head = None\n",
+    "        \n",
+    "    # Add a new node to the front of our linked list\n",
+    "    def push_on(self, new_value):\n",
+    "        # Create a new node with the value passed in\n",
+    "        new_node = Node(new_value)\n",
+    "        # set the new node's next attribute to the current front of list\n",
+    "        new_node.next = self.head\n",
+    "        # set the new node to the front of the list\n",
+    "        self.head = new_node\n",
+    "        \n",
+    "    # Add a new node to the end of our linked list\n",
+    "    def append(self, new_value):\n",
+    "        # Create a new node with the value passed in\n",
+    "        new_node = Node(new_value)\n",
+    "        \n",
+    "        # Check if the linked list is empty\n",
+    "        if self.head is None:\n",
+    "            # Set the head to our new node\n",
+    "            self.head = new_node\n",
+    "        # if not empty\n",
+    "        else:\n",
+    "            # traverse to the end of the list (aka the node.next is None)\n",
+    "            node = self.head\n",
+    "            while node.next is not None:\n",
+    "                node = node.next\n",
+    "            # Set the last node's next    \n",
+    "            node.next = new_node\n",
+    "            \n",
+    "    # Add a new value to our linked list after a certain node (prev_node)\n",
+    "    def insert_after(self, prev_value, new_value):\n",
+    "        prev_node = self.get_node(prev_value)\n",
+    "        # check if the previous node even exists\n",
+    "        if prev_node is None:\n",
+    "            print(f\"{prev_value} is not in the linked list\")\n",
+    "            return\n",
+    "        \n",
+    "        # Create a new node with the value passed in\n",
+    "        new_node = Node(new_value)\n",
+    "        # point the new_node's next to be the prev_node's (soon-to-be former) next\n",
+    "        new_node.next = prev_node.next\n",
+    "        # point the prev_node's next to be the new_node\n",
+    "        prev_node.next = new_node\n",
+    "        \n",
+    "        \n",
+    "    def get_node(self, value_to_get):\n",
+    "        # Start with the first node in our linked list\n",
+    "        check = self.head\n",
+    "        # While check is a node\n",
+    "        while check is not None:\n",
+    "            # if the value of the node we are checking is equal to the value for which we are searching\n",
+    "            if check.value == value_to_get:\n",
+    "                # Return that node\n",
+    "                return check\n",
+    "            # if not, move on to the next node and try again\n",
+    "            check = check.next\n",
+    "        # Once check is None, we know that value_to_get is not in linked list, return None\n",
+    "        return None\n",
+    "    \n",
+    "    def traverse_list(self):\n",
+    "        node = self.head\n",
+    "        while node is not None:\n",
+    "            print(node.value)\n",
+    "            node = node.next\n",
+    "        \n",
+    "        \n",
+    "weekdays = LinkedList()\n",
+    "weekdays.push_on('Wednesday')\n",
+    "weekdays.push_on('Monday')\n",
+    "weekdays.append('Thursday')\n",
+    "weekdays.append('Friday')\n",
+    "weekdays.insert_after('Monday', 'Tuesday')\n",
+    "\n",
+    "weekdays."
+   ]
   },
   {
    "cell_type": "markdown",
